# msql-4.2

./: .conftest.o.bc  BUGS  INSTALL  Makefile  RELEASE_NOTES  config.status  setup
conf/: configure  configure.in  dirent.c  dst.c  filepass.c  gmt_offset.c  huge.c  msync.c  rlimit.c  site.mm.in  ssize.c  syserr.c  target  uint32.c
conf/autom4te.cache/: output.0  traces.0
doc/: License  Manual  Perl
misc/: check-www-auth.msql  configure.in  msql.conf  parse_query_log
scripts/: make-install  make-target  mkinstalldirs
src/: Makefile  Makefile.tmpl  site.mm
src/common/: Makefile.tmpl  config.h  config.h.in  config_extras.h  config_extras.h.in  errmsg.h  msql_defs.h  portability.h
src/common/config/: .config.o.bc  Makefile.tmpl  config.c  config.h  config_priv.h
src/common/debug/: .debug.o.bc  Makefile.tmpl  debug.c  debug.h
src/common/libc_stuff/: .snprintf.o.bc  .strerror.o.bc  .strlib.o.bc  .strptime.o.bc  .strtoul.o.bc  .tmpnam.o.bc  Makefile  Makefile.tmpl  c_stuff.h  memmove.c  snprintf.c  strerror.c  strlib.c  strptime.c  strtoul.c  tmpnam.c
src/libmsql/: .datetime.o.bc  .libmsql.o.bc  .millidatetime.o.bc  .millitime.o.bc  .net_client.o.bc  .time.o.bc  Makefile.tmpl  datetime.c  libmsql.c  millidatetime.c  millitime.c  msql.h  net_client.c  net_client.h  time.c
src/makegen/: directory.mm  install.mm  library_os2.mm  library_unix.mm  makegen  makegen.cf  object.mm  program.mm  yacc.mm
src/msql/: .msql.o.bc  19.out  Makefile.tmpl  msql.c
src/msqladmin/: .msqladmin.o.bc  Makefile.tmpl  msqladmin.c
src/msqld/: Makefile  Makefile.tmpl
src/msqldump/: .msqldump.o.bc  Makefile.tmpl  msqldump.c
src/msqlexplain/: .msqlexplain.o.bc  Makefile.tmpl  msqlexplain.c
src/msqlexport/: .msqlexport.o.bc  Makefile.tmpl  msqlexport.c
src/msqlimport/: .msqlimport.o.bc  Makefile.tmpl  msqlimport.c
src/relshow/: .relshow.o.bc  Makefile  Makefile.tmpl  relshow.c
src/tests/: .insert_test.o.bc  .select_test.o.bc  Makefile.tmpl  cachetest  insert_test.c  killer  msql.times  msql.times-2.0.12  msql.times-3.0-broker  msql.times-3.0-single  msql.times-3.2-broker  msql.times-3.2-single  msql.times-3.3-broker  msql.times-3.3-single  msql.times-3.4-broker  msql.times-3.4-single  rtest  select_test.c
src/w3-msql/: README
(+205 files in other folders)
