dnl Process this file with autoconf to produce a configure script.
AC_INIT(RELEASE_NOTES)
AC_CONFIG_HEADER(src/common/config.h)
AC_PROG_CC()
if test "$ac_cv_prog_CC" = "gcc"; 
then
        WALL=-Wall
else
        WALL=
fi
AC_DEFINE_UNQUOTED(WALL, "$WALL")
AC_SUBST(WALL)

AC_RETSIGTYPE()
AC_PROG_RANLIB()
AC_PROG_YACC()
AC_CHECK_PROGS(XYACC,$YACC yacc byacc bison,none)
if test "$XYACC" = "none"
then
	echo "*** Error: No suitable parser found. ***"
	echo "    Please install 'yacc', 'byacc', or 'bison' package."
	exit 1
fi
 
AC_HAVE_FUNCS(sysconf)
AC_HAVE_FUNCS(strdup)
AC_HAVE_FUNCS(rindex)
AC_HAVE_FUNCS(random)
AC_HAVE_FUNCS(bcopy)
AC_HAVE_FUNCS(getdtablesize)
AC_HAVE_FUNCS(strsignal)
AC_HAVE_FUNCS(ftruncate)
AC_HAVE_FUNCS(setrlimit)
AC_HAVE_FUNCS(madvise)
AC_HAVE_FUNCS(msync)
AC_HAVE_FUNCS(strncasecmp)
AC_HAVE_FUNCS(mktemp)
AC_HAVE_FUNCS(snprintf)
AC_HAVE_FUNCS(strtoul)
AC_HAVE_FUNCS(strptime)
AC_HAVE_FUNCS(strerror)
AC_HAVE_FUNCS(flock)
AC_HAVE_LIBRARY(socket)
AC_HAVE_LIBRARY(nsl)
AC_HAVE_LIBRARY(gen)
AC_HAVE_LIBRARY(x)
AC_CHECK_LIB(dl, dlopen)
AC_HAVE_HEADERS(sys/sockio.h)
AC_HAVE_HEADERS(sys/mman.h)
AC_HAVE_HEADERS(dlfcn.h)
AC_HAVE_HEADERS(sys/dir.h)
AC_HAVE_HEADERS(dirent.h)
AC_HAVE_HEADERS(netinet/in_systm.h)
AC_HAVE_HEADERS(arpa/inet.h)
AC_HAVE_HEADERS(select.h)
AC_HAVE_HEADERS(sys/select.h)
AC_HAVE_HEADERS(sys/un.h)
AC_HAVE_HEADERS(strings.h)
AC_HAVE_HEADERS(stdarg.h)
AC_HAVE_HEADERS(string.h)
AC_HAVE_HEADERS(sys/timeb.h)
AC_HAVE_HEADERS(unistd.h)
AC_HAVE_HEADERS(stdint.h)
AC_HAVE_HEADERS(signal.h)
AC_TYPE_SIZE_T
AC_CONFIG_FILES(conf/site.mm src/makegen/makegen.cf)
AC_OUTPUT
