dnl Process this file with autoconf to produce a configure script.
AC_INIT(src)
AC_CONFIG_HEADER(src/config.h)
AC_PROG_RANLIB()
AC_PROG_YACC()
AC_HAVE_FUNCS(strdup)
AC_HAVE_FUNCS(rindex)
AC_HAVE_FUNCS(bcopy)
AC_HAVE_FUNCS(ftruncate)
AC_HAVE_FUNCS(symlink)
AC_HAVE_LIBRARY(socket)
AC_HAVE_LIBRARY(nsl)
AC_HAVE_LIBRARY(gen)
AC_HAVE_LIBRARY(x)
AC_HAVE_HEADERS(sys/select.h)
AC_HAVE_HEADERS(unistd.h)
AC_HAVE_HEADERS(malloc.h)
AC_HAVE_HEADERS(string.h)
AC_HAVE_HEADERS(strings.h)
AC_OUTPUT(src/Makefile src/reglib/Makefile)
